# tcp-sender

./: .clang-format  .gitignore  CMakeLists.txt  README.md  project.4coder
config/: project.ini
console/: CMakeLists.txt  main.cpp
console/src/: Arguments.h
core/: CMakeLists.txt
core/includes/Application/: Application.h  Args.h
core/includes/Config/: IniConf.h
core/includes/utils/: strFromHex.hpp
core/libs/: CMakeLists.txt
core/src/Application/: Application.cpp  Args.cpp
core/src/Config/: IniConf.cpp
data/: package_1.txt  package_2.txt
docs/: doxygen.conf
scripts/: browse-docs.sh  build-analys.sh  build.sh  move-car.sh  move-chroot.sh  rebuild.sh
scripts/init/: project-name  rename-project.sh
